# simple-subliminal-rl

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml
configs/env/: default.yaml
configs/experiment/: default.yaml  quick.yaml
configs/model/: cnn.yaml  mlp.yaml  mlp_aux.yaml
configs/reward/: aux_mse.yaml  step.yaml  trajectory.yaml  value.yaml
configs/training/: default.yaml
subliminal_rl/: config.py  distill.py  env.py  experiment.py  model.py  plot.py  ppo.py  reward.py  run.py
tests/: test_smoke.py
